# x-tweet-fetcher

./: CHANGELOG.md  MIGRATION.md  README.md  SKILL.md  pyproject.toml
.github/workflows/: ci.yml
docs/proposals/: slim-url-reader-package.md
scripts/: fetch_china.py  playwright_client.py  tweet_growth.py
skills/fetch-x-post/: SKILL.md
skills/fetch-x-post/agents/: openai.yaml
skills/fetch-x-post/references/: output-schema.md
src/xtf/: __init__.py  article.py  cli.py  client.py  errors.py  exceptions.py  http.py  models.py  normalize.py  urls.py
src/xtf/backends/: fxtwitter.py
src/xtf/parsers/: article.py  urls.py
tests/: test_article.py  test_cli.py  test_core.py  test_fxtwitter_backend.py  test_http.py  test_parsers_misc.py  test_parsers_snapshot.py  test_reader_api.py  test_skill.py  test_urls.py
tests/fixtures/: fxtwitter_article.json  fxtwitter_tweet.json  nitter_status.html  nitter_timeline.html  snapshot_article.txt  snapshot_replies.txt  snapshot_timeline.txt
