[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "x-tweet-fetcher"
version = "4.0.0.dev0"
description = "Fetch one public X/Twitter post or Article as reader-friendly structured content."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["twitter", "x", "article", "reader", "ai-agents"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.4"]

[project.scripts]
xtf = "xtf.cli:main"

[project.urls]
Homepage = "https://github.com/ythx-101/x-tweet-fetcher"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
xtf = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
